--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -31,7 +31,7 @@
   width: 18px;
   height: 18px;
   margin-right: 5px;
-  margin-left: -23px;
+  // margin-left: -23px;
 }
 .projectItem {
   display: flex;
