--- a/css/main.css
+++ b/css/main.css
@@ -196,8 +196,10 @@ a {
 }
 
 .details {
-  padding: 50px;
+  padding: 20px;
   background-color: #a79795;
+  display: flex;
+  flex-direction: column;
   text-align: left;
 }
 
@@ -266,7 +268,6 @@ a {
   width: 18px;
   height: 18px;
   margin-right: 5px;
-  margin-left: -23px;
 }
 
 .projectItem {
@@ -302,6 +303,12 @@ a {
 
 .link:hover {
   color: #32586e;
+}
+
+.projectIcon {
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
 }
 
 .info {
