--- a/sass/layouts/_details.scss
+++ b/sass/layouts/_details.scss
@@ -1,6 +1,8 @@
 .details {
-  padding: 50px;
+  padding: 20px;
   background-color: $color-bg;
+  display: flex;
+  flex-direction: column;
   text-align: left;
 
   @media screen and (max-width: 767px) {
