--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,5 @@
 @import './components/title';
 @import './components/language';
 @import './components//link';
+@import './components/summary';
 @import './layouts/info';
