--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ a {
 }
 
 .details {
-  padding: 20px;
+  padding: 60px 20px;
   background-color: #a79795;
   display: flex;
   flex-direction: column;
