--- a/sass/layouts/_details.scss
+++ b/sass/layouts/_details.scss
@@ -1,5 +1,5 @@
 .details {
-  padding: 60px 20px;
+  padding: 60px 20px 160px;
   background-color: $color-bg;
   display: flex;
   flex-direction: column;
